# nilmtk

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  environment-dev.yml  environment.yml  example.py  pyproject.toml  requirements.txt  setup.py  todo.txt
.github/workflows/: main.yml
ci/: build_conda_package.sh
conda/: build.sh  meta.yaml
data/: README.md  appliance_model_induced_density.json  co_test.h5  energy.h5  energy_complex.h5  meterdata_ukdale.h5  random.h5
data/REDD/: readme.txt
data/uk-dale/: README.txt  dataset.yaml
docs/: Makefile  Makefile~  conf.py  contribute.rst  make.bat  nilmtk.disaggregate.rst  nilmtk.feature_detectors.rst  nilmtk.rst  pre_process_sphinx_rst.py
docs/manual/: README.md  table_of_contents.md
docs/outdated/: BuildSys_2014_demo.ipynb  NILMTK_hackday.ipynb  README.md  co_fhmm.ipynb
docs/source/: about.ipynb  about.rst  api.rst  changelog.rst  conf.py  contribute.rst  convert_data_to_NILMTK_format.html  convert_data_to_NILMTK_format.ipynb  convert_data_to_NILMTK_format.rst  disaggregation_and_metrics.html  disaggregation_and_metrics.ipynb  disaggregation_and_metrics.rst  elecmeter_and_metergroup.html  elecmeter_and_metergroup.ipynb  elecmeter_and_metergroup.rst  exploring_single_electricity_meters.html  exploring_single_electricity_meters.rst  fileformats.rst  groups_of_meters.ipynb  hdf5_file_format.rst  hdf5_metadata.rst  index.rst  install.html  install.ipynb  install.rst  intro_nilmtk_v0_2.rst  ipython_utils.py  loading_data.ipynb  loading_data.rst  modules.rst  nilmtk.appliance.rst  nilmtk.building.rst  nilmtk.consts.rst  nilmtk.dataset.rst  nilmtk.dataset_converters.ampds.convert_ampds.rst  nilmtk.dataset_converters.ampds.rst  nilmtk.dataset_converters.combed.convert_combed.rst  nilmtk.dataset_converters.combed.download.rst  nilmtk.dataset_converters.combed.rst  nilmtk.dataset_converters.dataport.download_dataport.rst  (+88 more)
docs/standard_names/: README.md  appliances.txt  measurements.txt  power_measurements.txt  rooms.txt
examples/: ampds_model_co.json  co_1d_ampds.py  example.py  fhmm_ampds.py  load_ampds.py  load_hdf5.py  load_iawe.py  load_pecan_15min.py  load_pecan_1min.py  load_redd.py  load_ukpd.py  preprocess.py
nilmtk/: __init__.py  _feature_detectors.c  _feature_detectors.pyx  api.py  appliance.py  appliancegroup.py  building.py  consts.py  cross_validation.py  dataset.py  datastore.py  docinherit.py  elecmeter.py  elecmeterandmetergroup.py  electric.py  electricity.py  electricitymeter.py  emeter.py  exceptions.py  feature_detectors.py  hashable.py  loader.py  losses.py  mains.py  measurement.py  metergroup.py  metrics.py  mock.py  node.py  plots.py  preprocessing.py  reddstore.py  results.py  sensors.py  siteonlyapi.py  timeframe.py  timeframegroup.py  utils.py  version.py
nilmtk/appliance/: __init__.py
nilmtk/appliance_models/: __init__.py
nilmtk/dataset/: __init__.py  ampds.py  dataset.py  hes.py  iawe.py  pecan.py  redd.py  smart.py  ukpd.py
nilmtk/dataset_converters/: __init__.py  wikienergy.py
nilmtk/datastore/: __init__.py  csvdatastore.py  datastore.py  flycheck_hdfdatastore.py  hdfdatastore.py  key.py  tmpdatastore.py
nilmtk/disaggregate/: 1d_co.py  WindowGRU.py  __init__.py  co_1d.py  combinatorial_optimisation.py  dae.py  disaggregator.py  dsc.py  fhmm_exact.py  fhmm_relaxed.py  hart_85.py  latent_Bayesian_melding.py  maximum_likelihood_estimation.py  maximumlikelihood.py  maxlikelihood.py  mean.py  rnn.py  seq2point.py  seq2seq.py  test_co.py  zero.py
nilmtk/disaggregate_old/: disaggregator.py  hart_85.py  maximum_likelihood_estimation.py
nilmtk/feature_detectors/: __init__.py  cluster.py  steady_states.py
nilmtk/legacy/: __init__.py
nilmtk/pipeline/: __init__.py  clipnode.py  energynode.py  energyresults.py  locategapsnode.py  locategoodsectionsnode.py  locategoodsectionsresults.py  node.py  pipeline.py  results.py
nilmtk/preprocessing/: __init__.py  apply.py  clip.py
nilmtk/sensors/: __init__.py  ambient.py  door.py  electricity.py  gas.py  pir.py  temperature.py  utility.py  water.py
nilmtk/stats/: __init__.py  dropoutrate.py  dropoutrateresults.py  goodsections.py  goodsectionsresults.py  histogram.py  totalenergy.py  totalenergyresults.py
nilmtk/tests/: __init__.py  generate_data.py  generate_test_data.py  test_LatentBayesianMelding.py  test_appliancegroup.py  test_combinatorial_optimisation.py  test_datastore.py  test_datastore_converter.py  test_elecmeter.py  test_electricity.py  test_electricitymeter.py  test_emeter.py  test_feature_detectors.py  test_fhmm.py  test_fhmm_relaxed.py  test_loader.py  test_mains.py  test_measurement.py  test_metergroup.py  test_metrics.py  test_node.py  test_pass.py  test_stats_electricity.py  test_timeframe.py  testingtools.py
notebooks/: BuildSys_2014_demo-Copy0.ipynb  BuildSys_2014_demo.ipynb  BuildSys_2014_demo.ipynb.save  DF_column_tests.ipynb  HDF_experiments.ipynb  NILM_Workshop_2014_demo.ipynb  RCUK_showcase_demo.ipynb  README.md  ampds_co.ipynb  ampds_store_hdf5.ipynb  bmh_matplotlibrc.json  buildsys_demo_copy.ipynb  chaining_generators.ipynb  chaining_iterators.ipynb  co_fhmm.ipynb  combed-copy.ipynb  combed.ipynb  commercial.ipynb  correlation_elecmeters.ipynb  csv_vs_h5_read_speed.ipynb  custom.css  dataset_statistics.ipynb  demo_simultaneous_switches.ipynb  demo_switch_continuity.ipynb  disaggregation_across_datasets.ipynb  disaggregation_sampling_rate.ipynb  disaggregation_single_dataset_detailed.ipynb  eEnergy-demo.ipynb  entropy_mi.ipynb  fhmm.ipynb  hart-chunks.ipynb  hart.ipynb  index.ipynb  limit_RAM.ipynb  load_smart.ipynb  missing_samples.ipynb  multiple_appliances_per_meter.ipynb  multiprocessing.ipynb  nilmtk_v0_2_disaggregation.ipynb  num_appliances.ipynb  (+15 more)
notebooks/experimental/: DF_column_tests.ipynb  DataStore1.ipynb  buildsys_demo_copy.ipynb  co_fhmm.ipynb  combed.ipynb  data_access_objects.ipynb  disaggregate_chunk.ipynb  hart-copy.ipynb  interface_matlab.ipynb  mle.ipynb  multiple_appliances_per_meter.ipynb  (+7 more)
tests_on_large_datasets/: redd_house3_f1_score.py
(+1139 files in other folders)
